# SAD

./: #.gitignore#  .cvsignore  .ey.swp  .gitignore  .gitignore~  Dockerfile  EXTENSION  HACKING  INSTALL  JMR24nsc.in  LICENSE  Makefile  Makefile.~1.29.~  README  README.md  SAD2MADX`od$.seq  SADHelp.html  aa.seq  fort.32759  fort.538976288  help2HTML-MJ.sad  kekb-epics.conf  rb.sad  rb.sad~  sad.conf  sad.conf.sample  sad.conf~  twiss.sad
CVS/: Entries  Repository  Root~
Documents/: SADHelp-MJ.html  SADHelp.html  SADHelp.html~  sad.el
KBFrame/: KBFrame.Medium.Xft.res  KBFrame.Medium.res  KBFrame.Xft.res  KBFrame.Xft.res.~1.3.~  KBFrame.res  a.xbm  b.xbm  bb.xbm  blstipple.xbm  c.xbm  connect.xbm  constat1.xbm  constat2.xbm  constat3.xbm  constat4.xbm  constat5.xbm  cursors.xbm  d.xbm  dec.xbm  dirup.xbm  disconnect.xbm  downarrow.xbm  e.xbm  inc.xbm  medm.xbm  sad.xbm  toioc.xbm  uparrow.xbm
config/: 4.4BSD-Lite.spec  CYGWIN.spec  CYGWIN.spec.~1.3.~  Darwin.spec  DragonFly.spec  FreeBSD.spec  GCC.spec  GCC.spec.~1.18.~  ICC.spec  Linux.spec  NAG.spec  NetBSD.spec  OpenBSD.spec  PGI.spec  SunOS.spec  SunStudio.spec  default.spec.~1.5.~  sad.conf
contrib/: .cvsignore
contrib/BBBrem_dir/: BBBrem.C  BBBrem.h  CMakeLists.txt  ReadMe.txt  RunFlags.C  RunFlags.h  main_BBBrem.C
doc/: index-ja.html  index.html
extensions/: Makefile
files/: check-patch-set  export-patch-set  import-patch-set
mk/: Makefile  Makefile.module.in  Makefile.~1.15.~  sad.builtin.mk  sad.compiler.mk  sad.depend.mk  sad.doc.mk  sad.epics.mk  sad.fortran.mk  sad.framework.mk  sad.glue.mk  (+19 more)
(+2184 files in other folders)
